# cnr_logger

./: .codecov  .codecov.sh  .coverage.sh  .coverage.sh.bkp  .gitignore  .gitignore.save  .rosinstall  .travis.rosinstall  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  a.txt  catkin.options  cmake.options  cmake_install.cmake  cnr_loggerConfig.cmake.in  cnr_loggerConfigVersion.cmake.in  codecov.sh  codecov.yml  compile_commands.json  coverage.xml  doxygen.in  package.xml  sonar-project.properties
.github/workflows/: build_cmake.yml  industrial_ci_action.yml
cmake/: cnrConfigMacros.cmake  cnrConfigTemplate.cmake.in
doc/html/: annotated.html  classTracLogger.html  classcnr__logger_1_1TraceLogger-members.html  classcnr__logger_1_1TraceLogger.html  classes.html  classlog4cxx_1_1ColorPatternLayout-members.html  classlog4cxx_1_1ColorPatternLayout.html  classlog4cxx_1_1ColorPatternLayout__coll__graph.map  classlog4cxx_1_1ColorPatternLayout__coll__graph.md5  classlog4cxx_1_1ColorPatternLayout__inherit__graph.md5  cnr__logger_8h.html  cnr__logger_8h__incl.map  cnr__logger_8h__incl.md5  cnr__logger_8h_source.html  cnr__logger__macros_8h.html  cnr__logger__macros_8h__dep__incl.map  cnr__logger__macros_8h__dep__incl.md5  cnr__logger__macros_8h__incl.map  cnr__logger__macros_8h__incl.md5  cnr__logger__macros_8h_source.html  dir_000002_000000.html  dir_000003_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_2469126f4d61e29a1f7ea3436bd88ec0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  (+10 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  functions_2.js  namespaces_0.js  namespaces_1.js  searchdata.js
include/cnr_logger/: cnr_logger.h  cnr_logger.h.orig  cnr_logger_color_macros.h  cnr_logger_macros.h  cnr_logger_macros.h.orig  cnr_logger_macros_support.h  cnr_logger_static_macros.h  cnr_logger_static_macros_1.h  cnr_logger_static_macros_2.h  cnr_logger_static_macros_3.h  cnr_logger_static_macros_4.h  cnr_logger_static_macros_5.h  cnr_logger_variadic_macros.h  cnr_logger_variadic_macros_support.h  visibility_control.h
launch/: example.launch  test.launch
src/: cnr_logger.cpp  cnr_logger.cpp.orig  cnr_logger_example.cpp
src/cnr_logger/: cnr_logger.cpp
test/: test.launch  test_cnr_logger.cpp  test_cnr_logger.cpp.orig  test_std_time.launch
test/config/: cnr_logger.yaml  file_and_screen_different_appenders.yaml  file_and_screen_same_appender.yaml  only_file_streamer.yaml  only_screen_streamer.yaml
