<?xml version="1.0"?>
<package format="3">
  <name>cnr_logger</name>
  <version>0.0.0</version>
  <description>The cnr_logger package</description>

  <maintainer email="iras@stiima.cnr.it">iras</maintainer>

  <license>BSD</license>

  <url type="website">http://https://github.com/CNR-STIIMA-IRAS/cnr_logger</url>

  <author email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</author>

  <buildtool_depend condition="$ROS_VERSION == 2">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">cmake</buildtool_depend>
  
  <build_depend>boost</build_depend>
  <exec_depend>roscpp</exec_depend>
  
  <test_depend>rostest</test_depend>
  <test_depend>curl</test_depend>
  <test_depend condition="$ROS_VERSION == 1">code_coverage</test_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
